# esp32-cyd

./: .gitignore  README.md
platformio/: shell.nix
platformio/weather/: weather.ino
rust/test/: Cargo.toml
rust/test/.devcontainer/: devcontainer.json
test/: shell.nix
test/scripts/: build.sh  flash.sh
test/src/: main.rs  wifi.rs
